# ufmg-tcc-experimentos

./: .geminiignore  .gitignore  GEMINI.md  README.md  config.yaml  main.py  pyproject.toml
libs/nclusterbox/: INSTALL  Makefile  Parameters.h  README  TUTORIAL  fiber-input  install.sh  primaryschool-every-2-hours  reduced-fiber-input  reduced-fiber-input-one-way  slice-input
libs/nclusterbox/src/core/: AbstractDenseRoughTensor.cpp  AbstractDenseRoughTensor.h  AbstractRoughGraphTensor.cpp  AbstractRoughGraphTensor.h  AbstractRoughTensor.cpp  AbstractRoughTensor.h  AbstractShift.cpp  AbstractShift.h  AbstractSparseRoughTensor.cpp  AbstractSparseRoughTensor.h  AbstractTrie.cpp  AbstractTrie.h  AbstractTrieWithPrediction.cpp  AbstractTrieWithPrediction.h  CandidateVariable.cpp  CandidateVariable.h  ConcurrentPatternPool.cpp  ConcurrentPatternPool.h  ConstantShift.cpp  ConstantShift.h  DataFileReader.cpp  DataFileReader.h  DenseCrispTube.cpp  DenseCrispTube.h  DenseFuzzyTube.cpp  DenseFuzzyTube.h  DenseRoughGraphTensor.cpp  DenseRoughGraphTensor.h  DenseRoughTensor.cpp  DenseRoughTensor.h  EdgeFileReader.cpp  EdgeFileReader.h  ExpectationShift.cpp  ExpectationShift.h  FuzzyEdgeFileReader.cpp  FuzzyEdgeFileReader.h  FuzzyTuple.cpp  FuzzyTuple.h  FuzzyTupleFileReader.cpp  FuzzyTupleFileReader.h  (+50 more)
src/: create_report_charts.py  main.py
src/experiment_configuration/: configuration_reader.py
src/experiment_pipeline/: experiment_pipeline.py  experiment_pipeline_builder.py  experiment_state.py  step_order.py  step_type.py
src/experiment_pipeline/steps/: pipeline_step.py
(+14 files in other folders)
