[project]
name = "poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Henrique",email = "victor.henrique5800@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.20",
    "scipy>=1.7"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
